# ai-alchemy

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh  shell.nix
.devcontainer/: devcontainer.json
.github/other_workflows/: deploy-terraform.yml
.github/workflows/: deploy-azure.yml  python-development-environment.yaml
ansible/roles/docker_deploy/templates/docker/: docker-compose.yaml.j2
src/: gemma.py  main.py
src/ai/rag/lancedb/: lance.py
src/ai/rag/lancedb/data/low-cost/some_documents.lance/_transactions/: 0-1ddb7134-cc11-41a9-9c70-e23fba479bb6.txn  1-1dda0685-bfe3-497c-a1d8-1438d3a9fe96.txn  2-8f4d17e3-4c97-495a-b0fd-d196786913e4.txn  3-8cb56cb3-fc43-4e78-8026-8bb7556971f4.txn  4-4099249f-85a4-4f4a-bf25-3bc7d8c40eb1.txn
src/ai/rag/lancedb/data/low-cost/some_documents.lance/data/: 5fa835dd-0f27-48b3-87a1-faeff9ef825c.lance  c91b6074-a0cb-406c-81c1-0324b2b17116.lance  cb422708-c056-4b6f-8d0e-8afe09671d3f.lance  cb639e65-253b-433d-b819-e967418a1f40.lance
src/ai/rag/lancedb/data/sample-lancedb/sentences.lance/_transactions/: 0-d9edb9cc-8b5b-4ecc-aee0-8aa18963d465.txn  1-eec78645-25b4-43de-8b68-92f2d8030336.txn  2-74aa20f2-3dab-45ca-b023-fdb22a22a846.txn
src/ai/rag/peter-pan/: peter-pan.py  peter-pan.txt
terraform/: provider.tf  variables.tf
terraform/modules/alb/: main.tf
terraform/modules/ec2/: variables.tf
terraform/modules/sg/: main.tf
